# project-euler

./: .gitignore  .gitmodules  01.ss  02.ss  04.py  04.ss  05.py  05.ss  06.ss  07.ss  08.rkt  08.ss  09.ss  10.ss  104.py  11.ss  12.py  12.ss  13.ss  14.ss  145.py  15.ss  16.ss  17.ss  18.ss  19.ss  2.ss  20.ss  21.ss  22.rkt  23.py  23.ss  24.rkt  24.ss  25.ss  26.rkt  27.ss  28.ss  29.ss  3.ss  (+70 more)
22/: code.ss
42/: code.ss
60/: 60.py  60a.py  60d.py  bfs.py  pyproject.toml  runme.sh  test_bfs.py  zigzag.py
unfinished/: 206.ss  23.ss  26.ss  30.ss  33.ss  37.ss  39.ss  40.ss  41.ss  44.ss  52.ss  53.ss  55.ss  lazy-perms.ss  next-permutation.ss
